# FifaPred

./: .gitignore  Makefile  README.md  plan.md
model/: predictions.json  pyproject.toml
model/data/: make_bracket.py  sync_bracket.py  wc2026.json  wc2026_live.csv
model/src/fifa_pred/: __init__.py  bracket_state.py  build_predictions.py  data_loader.py  dixon_coles.py  evaluate.py  scraper.py  simulator.py  tournament_form.py  wc_dataset.py
model/tests/: test_bracket_state.py  test_knockout_payload.py  test_simulator.py  test_tournament_form.py  test_wc_dataset.py
