[project]
name = "fifa-pred"
version = "0.1.0"
description = "FIFA World Cup 2026 prediction engine (Dixon-Coles + Monte Carlo)"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pytest>=9.1.0",
    "scipy>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fifa_pred"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
